ack to ws, more info on about page, fixed collapse menu

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -12,6 +12,10 @@
     flex-direction: column;
 }
 
+.navbar-collapse.in {
+    overflow-y: hidden;
+}
+
 body {
     font-family:'helvetica', arial, sans-serif;
     background: #FFF;
